react-client/src/index.css
body { /* //* By allowing html & body tag to auto-set their height, div#root can use min-height alone */
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #262626;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

#root {
  /* //* Min-height forces div#root to grow, at min to viewport & ideally to full height of children. No specific height attr needed */
  min-height: 100vh;
  display: flex;
  flex-direction: column; /* //* Flex-column properly lays out navbar, body, and footer */
}

/* Originally considered navbar drawer that slid from left side */

h1,
h4 {
  color: white;
}

.thick-border {
  border-width: 2px !important;
}

.thick-full-border {
  border-width: 3px !important;
}

.fw-normal {
  font-weight: 500 !important;
}

.will-change-contents { /* Providing this reusable class allows me to easily remove it when the animation has finished! */
  will-change: contents; /* Alternatively could use the "custom-ident" option which takes any CSS property name */
  /* Usually "custom-ident" is used with 'transform' or 'opacity' i.e. "will-change: transform, opacity;" */
  /* Using 'will-change' is a last-resort BUT fairly common when using 'react-spring' since it's prepping the browser for future changes during rerenders */
  /* Real Example in "NotFoundPage" where 'will-change' on the 'page container' anticipates the 'background loading image container' will be animated */
}

/* 
5 Main colors of App:
1. 00FF00 - Electric Green
2. FFFFFF - White
3. 262626 - Eerie Black
4. 990000 - USC Red / Dark Red
5. 7F0799 - Violet RYB
*/

